objects/IdMatrix_Device_Intelligence_Response__c.object
<CustomObject>
    <fields>
        <fullName>Device_Status__c</fullName>
        <label>Device Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Score_Reason_Code__c</fullName>
        <label>Policy Score Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Score__c</fullName>
        <label>Policy Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veda_IdMatrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda IdMatrix</label>
        <referenceTo>Veda_IdMatrix__c</referenceTo>
        <relationshipLabel>IdMatrix Device Intelligence Response</relationshipLabel>
        <relationshipName>IdMatrix_Device_Intelligence_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>IdMatrix Device Intelligence Response</label>
    <nameField>
        <label>Device Intelligence Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IdMatrix Device Intelligence Response</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>